--- a/gluten-assets/glutenstyle.css
+++ b/gluten-assets/glutenstyle.css
@@ -8,11 +8,15 @@ body {
     border-color: orangered;
     border-top-width: 2px;
     border-bottom-width: 2px;
+    background-color: rgb(233, 177, 108);
 }
 
 h1 {
     font-weight: 700;
     line-height: 3rem;
+    padding-bottom: 2%;
+    text-align: center;
+ 
 }
 
 
@@ -26,4 +30,63 @@ h2 {
         width: 40%;
 }
 
+#image-container {
+    box-sizing: border-box;
+    
+    max-width: 150%;
+    margin: 10px;
+    padding: 5px;
+      
+}
+/* * {
+  box-sizing: border-box;
+} */
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 20%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  text-align: center;
+  background-color: #f1f1f1;
+  border: 5px solid darkblue;
+  height: 275px;
+  width: 350px;
+  margin-left: 100px;
+  margin-top: 25px;
+}
+
+#information {
+    max-width: 80%;
+    margin-left: 10%;
+}
 
