added links in toolbar to main index and gluten home page

--- a/gluten-assets/glutenstyle.css
+++ b/gluten-assets/glutenstyle.css
@@ -23,6 +23,10 @@ h1 {
 h2 {
     text-align: center;
 }
+
+p {
+  text-align: center;
+}
 .center {
         display: block;
         margin-left: auto;
