--- a/Homepage Assets/css/homepagestyle.css
+++ b/Homepage Assets/css/homepagestyle.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-image: linear-gradient(rgb(212, 212, 212), rgb(164, 223, 249), rgb(157, 157, 180))
+    background-image: linear-gradient(rgb(212, 212, 212), rgb(164, 223, 249), rgb(157, 157, 180));
     
 }
 
