--- a/assets/css/keto.css
+++ b/assets/css/keto.css
@@ -1,3 +1,16 @@
 *{
-    background: indianred;
+    padding: 0;
+    margin: 0;
+    border: 0;
+
+    
+}
+
+.nav{
+    color: darkblue;
+    font-weight: bolder;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10px
 }
