--- a/Gluten/gluten-assets/glutenstyle.css
+++ b/Gluten/gluten-assets/glutenstyle.css
@@ -12,13 +12,51 @@ body {
     padding: .5%;
 }
 
+nav 
+  li {
+    display: inline-block;
+    margin-right: 10px; /* add spacing between items */
+  }
+
+
 h1 {
-    font-weight: 700;
+    font-weight: 700px;
     line-height: 3rem;
     padding-bottom: 2%;
     text-align: center;
  
 }
+h1::before {  
+  transform: scaleX(0);
+  transform-origin: left right;
+}
+/* 
+h1:hover::before {
+  transform: scaleX(1);
+  transform-origin: right left;
+}
+
+
+ html {
+  block-size: 100%;
+  inline-size: 100%;
+}
+
+body {
+  min-block-size: 100%;
+  min-inline-size: 100%;
+  margin: 0;
+  box-sizing: border-box;
+  display: grid;
+  place-content: center;
+  font-family: system-ui, sans-serif;
+} */
+
+@media (orientation: landscape) {
+  body {
+    grid-auto-flow: row;
+  }
+} */
 
 
 h2 {
@@ -34,6 +72,7 @@ p {
         margin-right: auto;
         width: 40%;
 }
+
 
 #image-container {
     box-sizing: border-box;
@@ -94,4 +133,35 @@ body {
     max-width: 80%;
     margin-left: 10%;
 }
+
+#recipe-Search img {
+  box-sizing: border-box;
+  background-color: #f1f1f1;
+  border: 5px solid darkblue;
+  height: 275px;
+  width: 350px;
+  margin-left: 500px;
+}
+h3{
+  text-align: center;
+}
+
+#nutrient {
+  text-align: center;
+}
+
+ ul {
+    list-style: none;
+  }
+ ul li::before {
+    content: "";
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/fb-heart.gif);
+    background-size: contain;
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    position: relative;
+    top: 0.1rem;
+    margin-right: 0.2rem;
+  }
 
