Added CSS for allergy div to keto css file.

--- a/Keto/assets/keto.css
+++ b/Keto/assets/keto.css
@@ -12,6 +12,21 @@ body{
     
 }
 
+#allergy{
+    display: flex;
+    align-items: center;
+    max-width: 600px;
+    margin: auto;
+}
+  
+#allergies{
+    border: 2px solid black;
+    display: block;
+    text-align: center;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
 .header h1{
     font-size: 5em;
     text-decoration:underline;
