--- a/Gluten/gluten-assets/glutenstyle.css
+++ b/Gluten/gluten-assets/glutenstyle.css
@@ -20,43 +20,19 @@ nav
 
 
 h1 {
-    font-weight: 700px;
-    line-height: 3rem;
-    padding-bottom: 2%;
+    font-weight: 800px;
+    line-height: 5rem;
+    padding-bottom: 1.5%;
     text-align: center;
  
 }
+/* from https://wdexplorer.com/20-examples-beautiful-css-typography-design/ */
+h1 { color: #d54d7b; font-family: "Great Vibes", cursive; font-size: 165px; line-height: 160px; font-weight: normal; margin-bottom: 0px; margin-top: 40px; text-align: center; text-shadow: 0 1px 1px #fff; }
 h1::before {  
   transform: scaleX(0);
   transform-origin: left right;
 }
-/* 
-h1:hover::before {
-  transform: scaleX(1);
-  transform-origin: right left;
-}
 
-
- html {
-  block-size: 100%;
-  inline-size: 100%;
-}
-
-body {
-  min-block-size: 100%;
-  min-inline-size: 100%;
-  margin: 0;
-  box-sizing: border-box;
-  display: grid;
-  place-content: center;
-  font-family: system-ui, sans-serif;
-} */
-
-@media (orientation: landscape) {
-  body {
-    grid-auto-flow: row;
-  }
-} */
 
 
 h2 {
