--- a/Vegan/Assets/vegan.css
+++ b/Vegan/Assets/vegan.css
@@ -18,6 +18,7 @@
   text-align: center;
   padding-top: 2px;
   padding-bottom: 2px;
+}
 
 .generated-list:hover {
   background-color: rgb(182, 235, 182);
